syntax = "proto3";

package dkg.dkgpb.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/obolnetwork/charon/dkg/dkgpb/v1";

message MsgSync {
 google.protobuf.Timestamp timestamp = 1;
 bytes hash_signature = 2;
 bool shutdown = 3;
}

message MsgSyncResponse {
  google.protobuf.Timestamp sync_timestamp = 1;
  string error = 2;
}
